fix breadcrumbs wrap

--- a/source/modules/breadcrumbs/breadcrumbs.styl
+++ b/source/modules/breadcrumbs/breadcrumbs.styl
@@ -22,6 +22,7 @@
 
 .m-breadcrumbs
     display: flex
+    flex-wrap: nowrap
     padding: 0
     list-style: none
     font-size: em(14px)
